--- a/adoptions/templates/home.html
+++ b/adoptions/templates/home.html
@@ -1,1 +1,14 @@
-Home
+<div>
+  {% for pet in pets %}
+    <div class="petname">
+      <a href="{% url 'pet_detail' pet.id %}">
+        {{pet.name|capfirst}}
+      </a>
+      <p>{{pet.species}}</p>
+      {% if pet.breed %}
+        <p>Breed: {{pet.breed}}</p>
+      {% endif %}
+      <p class="hidden">{{pet.description}}</p>
+    </div>
+  {% endfor %}
+</div>
